[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.9.0"
itertools = "0.10.5"
pathfinding = "4.0.0"
regex = "1.7.0"
strum = "0.24"
strum_macros = "0.24"
