[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.12.0"
native-tls = "0.2.11"
pathfinding = "4.4.0"
regex = "1.10.2"
serde_json = "1.0.108"
